<resources>
    <string name="app_name">Medi Life</string>

    <string name="hello_world">Medi Life</string>
    <string name="action_settings">Settings</string>
    <string name="spinprompt">اختار التخصص</string>
    <string name="tw">Twiter</string>
    <string name="mail">E-mail</string>
    <string name="web">Web Site</string>
<string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="nmae">Name</string>
    <string name="address">Address</string>
    <string name="password">Please Enter E-mail Address</string>
    <string name="Email">Please Enter the Password</string>
    <string name="serach">Search Medical Place</string>
<string name="spinner_default">Please Select</string>

    <string-array name="image_ids">
        <item>@drawable/image0</item>
        <item>@drawable/image1</item>
        <item>@drawable/image2</item>
        <item>@drawable/image3</item>
        <item>@drawable/image4</item>

    </string-array>
    <string-array name="drawer">
        <item>Drug Information</item>
        <item>Health Conditions</item>
        <item> Limits and vital signs</item>
        <item>Medical Utilities</item>
        <item>Hospitals</item>
        <item>About us</item>
        <item>Contact us</item>
        <item>Log Out</item>
    </string-array>
    <string-array name="Gender">
    <item>Male</item>
    <item>Female</item>
    </string-array>
    <string-array name="directory">
    <item>اختار .... </item>
    <item>مستشفيات</item>
    <item>صيدليات</item>
    <item>عيادات اسنان</item>
    <item>عيادات خاصة</item>

</string-array>
    <string-array name="directory1">
    <item>اختار ....</item>
    <item>الزيتونة</item>
    <item>امبيريال</item>
    <item>الاطباء</item>
    <item>البراحة</item>
        <item>يستبشرون</item>

</string-array>

<string name="search_ho">ابحث عن دواء</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_Gender">Select Gender</string>
    <string name="hint_DOB">Date Of Birth</string>
    <string name="hint_Phone_No">Phone No</string>
    <string name="hint_Location">Location</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="search_hint">Search Customers</string>
    <string name="search_label">Customers</string>
    <string name="str_spr_countries">Select Medical Center</string>
    <string name="title_activity_maps">Map</string>
    <string name="datepicker">DatePicker</string>
    <string name="timepicker">TimePicker</string>
    <string name="product_name">Product Name</string>
    <string name="txt_image_slider">Image Slideshow</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="time_out">Time Out</string>
    <string name="error_occured">Error Occurred</string>
    <string name="job">Occupation</string>


    <string name="transition_name_alarm">transition:ALARM</string>
    <string name="conf_exh"><![CDATA[Articles & Journal]]></string>
    <string name="herb_rem">Herbal Remedies</string>
    <string name="conf_ex">Extras</string>
    <string name="art_exh"><![CDATA[Articles & Exhibitions]]></string>
    <string name="conf_exhab"><![CDATA[Conferences & Exhibitions]]></string>
    <string name="med_name_sch">Enter Name of Medicine</string>
    <string name="started_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="tim_med_sch">Time for Medicine Schedule</string>
    <string name="interval_hours">Set Interval in hours</string>
    <string name="med_dose">Enter Dose of Medicine</string>
    <string name="med_qty">Enter Quantity of Medicine</string>
    <string name="med_comment">Enter Comment</string>
    <string name="select_from_futur">Kindly Select Date from future.</string>
    <string name="set_start_end_first">Kindly set the Start and End date first.</string>
    <string name="toolbar_med_sch">My Medicine Schedules</string>
    <string name="take_your_medicine">Kindly take your medicine.</string>
    <string name="HEMATOLOGIC">HEMATOLOGIC</string>
    <string name="MEN">MEN</string>
    <string name="WOMEN">WOMEN</string>
    <string name="SPECIALIST">SPECIALIST</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="doc_time_app"/>
    <string name="patient_name">patient_name</string>

    <string name="Search_Medicin">Search Medicin</string>
    <string name="type_medicin_Name">Type Medicine Name</string>
    <string-array name="Doc_spec">
        <item>اخصائي نساء وتوليد</item>
        <item>اخصائي باطنية</item>
        <item>اخصائي جراحة</item>
        <item>اخصائي اطفال</item>
        <item>اخصائي عظام</item>
        <item>اخصائي صدرية</item>
        <item>اخصائي قلب</item>
        <item>اخصائي الكلاء والمسالك البولية</item>

    </string-array>
    <string-array name="doctor_names">
        <item>د.عمر احمد عبدالرحيم</item>

        <item> د.خالد عثمان</item>
        <item>دد. عشميق</item>
        <item>د. هيثم </item>

    </string-array>



    <!--//strings need to be translated-->
    <string name="medi_information">Medical Information</string>
    <string name="medi_services">Medical Service</string>
    <string name="extras">Extras</string>
    <string name="report">Report</string>
    <string name="exit">Exit</string>
    <string name="options">Options</string>
    <string name="medical_directory">Medical Directory</string>
    <string name="limits_signs">Limits &amp; Signs</string>
    <string name="drug_information">Drug Information</string>
    <string name="conditions">Conditions</string>
    <string name="conference_exhibition">Conference &amp; Exhibitions</string>
    <string name="articles_journals">Articles &amp; Journals</string>
    <string name="tips_tricks">Tips &amp; Tricks (First Aid)</string>
    <string name="herbal_remedies">Herbal Remedies</string>
    <string name="medi_assist">Medi Assist (Reminder)</string>
    <string name="drug_availability">Drug Availability</string>
    <string name="drug_delivery">Drug Delivery</string>
    <string name="doctor_appointment">Doctors Appointment</string>

</resources>
